--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11227,7 +11227,6 @@ input:hover {
 .dot-back {
     content: "";
     position: absolute;
-    bottom: -202px;
     right: -5.3rem;
     background: url(/images/6fde913.svg) no-repeat;
     width: 12rem;
@@ -11282,4 +11281,76 @@ input:hover {
 .play-div:hover {
     background-color: var(--pr-green);
     cursor: pointer;
+}
+
+.play-div-check {
+    position: relative;
+    top: -104px;
+    right: 132px;
+    width: 50px;
+    height: 50px;
+    z-index: 10000000;
+    background-color: #4caf50;
+    padding: 10px;
+    border-radius: 50px;
+    line-height: 4px;
+    font-size: 40px !important;
+    box-shadow: 0 5px 10px 0 rgba(20,83,155,.05);
+}.play-div-check i{
+    color: white;
+}
+.play-div-check i {
+    position: relative;
+    top: 4px;
+    right: 3px;
+}
+/*.pre-checked {*/
+/*    width: 100%;*/
+/*    height: 178px;*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    right: 0;*/
+/*    background-color: #4caf50;*/
+/*    border-radius: 0.33333rem;*/
+/*    z-index: 100000000;*/
+/*    opacity: 0.6;*/
+/*}*/
+.header {
+    position: fixed;
+    width: 100%;
+    z-index: 10000000000000000000000000000;
+}
+.footer {
+    background-color: var(--pr-green) ;
+    padding-right: 10px;
+    width: 100%;
+    height: 100px;
+}
+.up-footer {
+    width: 100%;
+    height: 576px;
+    background-image: url("../images/bg-footer.png");
+    background-repeat: repeat-x;
+    background-size: contain;
+    -webkit-background-size: contain;
+    background-position-y: bottom;
+}
+.step-item {
+    height: 20rem;
+    background: #fff;
+    box-shadow: 0 5px 10px 0 rgba(20,83,155,.05);
+    border-radius: .3333rem;
+}
+.open-or-not {
+    background-color: var(--pr-green) !important;
+    color: #fff !important;
+    opacity: 1 !important;
+    padding: 10px !important;
+    border-radius: 50px !important;
+    line-height: 10px !important;
+    position: absolute;
+    right: 8px;
+    /* top: -20px; */
+    bottom: 122px;
+    z-index: 10;
 }
