--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11252,8 +11252,8 @@ input:hover {
     top: 15px;
     right: 20px;
     font-size: 14px !important;
-    color: #333 !important;
-    background-color: #fff;
+    color: #fff !important;
+    background-color: var(--pr-blue);
     padding: 5px 36px;
     border-radius: 50px;
     box-shadow: 0 5px 10px 0 rgba(20,83,155,.05);
@@ -11290,7 +11290,7 @@ input:hover {
     width: 50px;
     height: 50px;
     z-index: 10000000;
-    background-color: #4caf50;
+    background-color: var(--pr-green);
     padding: 10px;
     border-radius: 50px;
     line-height: 4px;
@@ -11310,7 +11310,7 @@ input:hover {
 /*    position: absolute;*/
 /*    top: 0;*/
 /*    right: 0;*/
-/*    background-color: #4caf50;*/
+/*    background-color: var(--pr-green);*/
 /*    border-radius: 0.33333rem;*/
 /*    z-index: 100000000;*/
 /*    opacity: 0.6;*/
@@ -11318,13 +11318,15 @@ input:hover {
 .header {
     position: fixed;
     width: 100%;
-    z-index: 10000000000000000000000000000;
+    z-index: 1000000000;
 }
 .footer {
     background-color: var(--pr-green) ;
     padding-right: 10px;
     width: 100%;
     height: 100px;
+    position: absolute;
+    bottom: -40px;
 }
 .up-footer {
     width: 100%;
@@ -11334,6 +11336,7 @@ input:hover {
     background-size: contain;
     -webkit-background-size: contain;
     background-position-y: bottom;
+    position: absolute;
 }
 .step-item {
     height: 20rem;
@@ -11353,4 +11356,174 @@ input:hover {
     /* top: -20px; */
     bottom: 122px;
     z-index: 10;
+}
+.open-or-not-check {
+    background-color: var(--pr-green) !important;
+    color: #fff !important;
+    opacity: 1 !important;
+    padding: 10px !important;
+    border-radius: 50px !important;
+    line-height: 10px !important;
+    position: absolute;
+    right: 8px;
+    /* top: -20px; */
+    bottom: 122px;
+    z-index: 10;
+}
+
+.btn-see {
+    width: 100%;
+    text-align: center;
+    border: none !important;
+    font-size: 12px;
+    padding: 7px 16px;
+    color: #fff !important;
+    background-color: var(--pr-green);
+    border-radius: 50px;
+}
+.btn-see-div {
+    width: 100%;
+    height: 0;
+    border-radius: 50px;
+    position: relative;
+    top: -12px;
+    text-align-last: center;
+}
+
+.top-links{
+    font-size: 12px;
+    color: var(--pr-blue);
+    margin: 0 13px;
+    padding: 10px;
+    border-bottom: 3px solid #f1f3f8;
+}
+.top-links:hover {
+    border-bottom: 3px solid var(--pr-green);
+}
+.back-icon {
+    padding: 10px;
+    border-radius: 50px;
+    line-height: 4px;
+    font-size: 40px !important;
+    width: 50px;
+    height: 50px;
+    background: transparent;
+    border: none;
+    margin-top: 5px;
+    margin-left: 12px;
+}
+.back-icon:hover , .back-icon:focus {
+    background-color: #ccc;
+}
+.splash-screen {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    z-index: 1000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000;
+}
+.splash-logo {
+    background-image: url(../images/splash.svg);
+    width: 50px;
+    height: 50px;
+    background-size: cover;
+    overflow: auto;
+    margin: auto;
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
+    transition: 0.5s all;
+}
+.profile-div {
+    background: #fff;
+    box-shadow: 0 5px 10px 0 rgba(20,83,155,.05);
+    border-radius: .3333rem;
+}
+.steper {
+    width: 100%;
+    height: auto;
+    background-color: white;
+    border-bottom: 1px solid #f1f3f8;
+    padding: 12px;
+    padding-top: 5px;
+    padding-bottom: 15px;
+    font-size: 12px !important;
+}
+a{
+    color : var(--pr-blue)
+}
+.profile-ul {
+    list-style: none;
+    display: flex;
+    width: 100%;
+    padding-right: 10px;
+    margin-top: 10px;
+}
+.profile-ul li {
+    margin: 0px 15px;
+    margin-top: 10px;
+}
+.profile-ul li a{
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.66667;
+    color: #343448;
+    background-color: #fafafc;
+    padding: 7px 16px;
+    border-radius: 50px;
+}.profile-ul li a:hover{
+
+    color: #343448;
+    background-color: #f1f3f8;
+
+}
+.div-scrolable {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #f6f8fb;
+    border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #cccc;
+    border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #8e8e8e;
+}
+.profile-page {
+    background-color: var(--pr-green) !important;
+    color: #fff !important;
+}.profile-page:hover {
+    background-color: var(--pr-green) !important;
+    color: #fff !important;
+}
+.alert {
+    position: fixed;
+    z-index: 10000000;
+    bottom: 0;
+    left: 0;
+    border-radius: 0 50px 50px 0;
+}
+.alert-success {
+    background-color: #4caf50 !important;
+    color: white !important;
+}
+.box-readed {
+    display: flex;
+    background-color: #f1f3f8;
+    padding: 10px;
+    border-radius: 5px;
 }
