--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11741,3 +11741,13 @@ p img {
     padding: 10px;
     margin-bottom: 12px;
 }
+
+.passed-cat {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(76, 175, 80 ,0.5);
+    border-radius: 50px 50px 50px 0;
+    position: absolute;
+    top: 0;
+    right: -16px;
+}
