--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11759,3 +11759,20 @@ hr {
     border-color: var(--pr-green);
     background-color: var(--pr-green);
 }
+.sticky-level {
+    width: 35px;
+    height: 50px;
+    top: 0;
+    position: absolute;
+    left: 0;
+    background-color: var(--pr-green);
+    text-align: center;
+    color: white;
+    font-size: 21px;
+    border-radius: 0px 0px 50px 50px;
+    box-shadow: 0 5px 10px 0 rgba(0,0,0,.2)
+}
+.sticky-level span{
+    vertical-align: -webkit-baseline-middle;
+    vertical-align: middle;
+}
