--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11776,3 +11776,29 @@ hr {
     vertical-align: -webkit-baseline-middle;
     vertical-align: middle;
 }
+.profile-header {
+    background-color: var(--pr-green);
+    width: 100%;
+    height: 100px;
+}
+
+.border-radius-def {
+    border-radius: 5px !important;
+}
+.avatar-img {
+    border: 5px solid #f1f3f8;
+    border-radius: 50%;
+    width: 80px;
+    position: relative;
+    top: 57px;
+    right: 10px;
+}
+.username-txt {
+    font-size: 14px;
+    font-weight: bold;
+    position: relative;
+    bottom: 0;
+    top: 75px;
+    float: left;
+    left: 10px;
+}
